Bug 1330614 - avoid memory leak in FillRectWithMask. r=jrmuizel

MozReview-Commit-ID: 1rR3juCO1NB